--- a/requirements.txt
+++ b/requirements.txt
@@ -3,23 +3,23 @@ bs4
 certifi
 charset-normalizer
 coverage
-decorator
+decorator>=4.3.0
 deprecation
 eyed3
 filetype
 idna
-imageio
+imageio>=2.5.0
 imageio-ffmpeg
-moviepy
-numpy
+moviepy==1.0.3
+numpy>=1.18.1
 packaging
-Pillow
+Pillow>=7.0.0
 proglog
 pyparsing
 requests
 soupsieve
 toml
-tqdm
+tqdm>=4.0.0
 urllib3==1.26.17
 youtube-search
 lxml
@@ -29,3 +29,7 @@ tekore
 flask
 Werkzeug
 pytubefix
+scipy>=1.3.0
+pydub>=0.23.0
+audiofile>=0.0.0
+opencv-python>=4.5
